tests/valid/underscore/multi_expr_stmt.facet
fn f(x: unrestricted isize, y: unrestricted isize) -> unrestricted isize {
    (drop x);
    (drop y);
    42
}
