tests/invalid/shadowing_error/shadow_linear_param_not_consumed.facet
fn f(x: linear isize) -> unrestricted isize {
    let x: unrestricted isize = 42;
    x
}
